Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "コーディングで マレーシアを探索しよう！"
+thumbnail: /img/2023/exhibition/1.jpg
 permalink: /expo/1
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コーディングで マレーシアを探索しよう！</h1>
