--- a/_pages/exhibition/2023-10.md
+++ b/_pages/exhibition/2023-10.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "アップアップシューティング"
+thumbnail: /img/2023/exhibition/10.jpg
 permalink: /expo/10
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">アップアップシューティング</h1>
