--- a/_pages/exhibition/2023-11.md
+++ b/_pages/exhibition/2023-11.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "猫の箱庭"
+thumbnail: /img/2023/exhibition/11.jpg
 permalink: /expo/11
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">猫の箱庭</h1>
