--- a/_pages/exhibition/2023-12.md
+++ b/_pages/exhibition/2023-12.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "対戦ゲーム"
+thumbnail: /img/2023/exhibition/12.jpg
 permalink: /expo/12
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">対戦ゲーム</h1>
