--- a/_pages/exhibition/2023-13.md
+++ b/_pages/exhibition/2023-13.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "鹿さんゲーム"
+thumbnail: /img/2023/exhibition/13.jpg
 permalink: /expo/13
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">鹿さんゲーム</h1>
