--- a/_pages/exhibition/2023-14.md
+++ b/_pages/exhibition/2023-14.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "心カフェメニューシステム"
+thumbnail: /img/2023/exhibition/14.jpg
 permalink: /expo/14
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">心カフェメニューシステム</h1>
