--- a/_pages/exhibition/2023-15.md
+++ b/_pages/exhibition/2023-15.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "お太子ネコの挑戦状！歴史人物なまえクイズ"
+thumbnail: /img/2023/exhibition/15.jpg
 permalink: /expo/15
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">お太子ネコの挑戦状！歴史人物なまえクイズ</h1>
