--- a/_pages/exhibition/2023-16.md
+++ b/_pages/exhibition/2023-16.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "yamaguchi_maps"
+thumbnail: /img/2023/exhibition/16.jpg
 permalink: /expo/16
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">yamaguchi_maps</h1>
