--- a/_pages/exhibition/2023-17.md
+++ b/_pages/exhibition/2023-17.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "モ〜レッツキャッチ！ゲーム"
+thumbnail: /img/2023/exhibition/17.jpg
 permalink: /expo/17
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">モ〜レッツキャッチ！ゲーム</h1>
