--- a/_pages/exhibition/2023-18.md
+++ b/_pages/exhibition/2023-18.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "お金ゲーム"
+thumbnail: /img/2023/exhibition/18.jpg
 permalink: /expo/18
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">お金ゲーム</h1>
