--- a/_pages/exhibition/2023-19.md
+++ b/_pages/exhibition/2023-19.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "名古屋駅シュミレーター"
+thumbnail: /img/2023/exhibition/19.jpg
 permalink: /expo/19
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">名古屋駅シュミレーター</h1>
