--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "scratchタイピング"
+thumbnail: /img/2023/exhibition/2.jpg
 permalink: /expo/2
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">scratchタイピング</h1>
