--- a/_pages/exhibition/2023-20.md
+++ b/_pages/exhibition/2023-20.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "Space Travelers"
+thumbnail: /img/2023/exhibition/20.jpg
 permalink: /expo/20
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">Space Travelers</h1>
