--- a/_pages/exhibition/2023-21.md
+++ b/_pages/exhibition/2023-21.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "世界一難しいゲームを再現しました"
+thumbnail: /img/2023/exhibition/21.jpg
 permalink: /expo/21
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">世界一難しいゲームを再現しました</h1>
