--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "SC Wars & zss79.jp"
+thumbnail: /img/2023/exhibition/22.jpg
 permalink: /expo/22
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">SC Wars & zss79.jp</h1>
