--- a/_pages/exhibition/2023-3.md
+++ b/_pages/exhibition/2023-3.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "コース攻略したぞ！"
+thumbnail: /img/2023/exhibition/3.jpg
 permalink: /expo/3
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コース攻略したぞ！</h1>
