--- a/_pages/exhibition/2023-5.md
+++ b/_pages/exhibition/2023-5.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "蛇ゲーム"
+thumbnail: /img/2023/exhibition/5.jpg
 permalink: /expo/5
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">蛇ゲーム</h1>
