--- a/_pages/exhibition/2023-6.md
+++ b/_pages/exhibition/2023-6.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "シューティングゲーム（はやと）8.9"
+thumbnail: /img/2023/exhibition/6.jpg
 permalink: /expo/6
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">シューティングゲーム（はやと）8.9</h1>
