--- a/_pages/exhibition/2023-8.md
+++ b/_pages/exhibition/2023-8.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "タイマー＆スケジュールアプリ"
+thumbnail: /img/2023/exhibition/8.jpg
 permalink: /expo/8
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">タイマー＆スケジュールアプリ</h1>
