--- a/_pages/exhibition/2023-7.md
+++ b/_pages/exhibition/2023-7.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "my friendl オリジナル"
+thumbnail: /img/2023/exhibition/7.jpg
 permalink: /expo/7
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">my friendl オリジナル</h1>
