--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "シーザー暗号作成読み取り器"
+thumbnail: /img/2023/exhibition/9.jpg
 permalink: /expo/9
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">シーザー暗号作成読み取り器</h1>
