Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-10.md
+++ b/_pages/exhibition/2023-10.md
@@ -3,6 +3,7 @@ layout: default
 title: "アップアップシューティング"
 thumbnail: /img/2023/exhibition/10.jpg
 permalink: /expo/10
+description: このゲームは、宇宙船の弾で敵を倒していくゲームです。また、ゲームには、ボスを倒すごとにプレイヤーがだんだんパワーアップしていきます。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">アップアップシューティング</h1>
 <div class="main_content">
