--- a/_pages/exhibition/2023-11.md
+++ b/_pages/exhibition/2023-11.md
@@ -3,6 +3,7 @@ layout: default
 title: "猫の箱庭"
 thumbnail: /img/2023/exhibition/11.jpg
 permalink: /expo/11
+description: 猫が、いろいろなイベントがあいます！！そこで、猫を操作して、長い間いきのこらせましょう！！！カオスイベントは、雷⚡、隕石、暗闇があります。下にある、★、♥、渦巻、☀は、おすと、それぞれの、イベントがはっせいします。町をモチーフにしたワールドでいきのこりましょう！！
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">猫の箱庭</h1>
 <div class="main_content">
