--- a/_pages/exhibition/2023-12.md
+++ b/_pages/exhibition/2023-12.md
@@ -3,6 +3,7 @@ layout: default
 title: "対戦ゲーム"
 thumbnail: /img/2023/exhibition/12.jpg
 permalink: /expo/12
+description: このゲームは黒い大砲と白い大砲が弾を撃って、お互いの大砲に当てて、相手を倒すゲームです。<br>二人用なので、二人で対戦してみてください。<br>工夫したところは、弾を撃った時に音を鳴らすところです。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">対戦ゲーム</h1>
 <div class="main_content">
