--- a/_pages/exhibition/2023-13.md
+++ b/_pages/exhibition/2023-13.md
@@ -3,6 +3,7 @@ layout: default
 title: "鹿さんゲーム"
 thumbnail: /img/2023/exhibition/13.jpg
 permalink: /expo/13
+description: このゲームは鹿さんを矢印キーで左右に動かして、鹿せんべいを取るゲームです。<br>鹿せんべいを取ると音が出て、スコアが1上がります。ニンニクとトウガラシを取ってもスコアは上がりません。<br>時間制限は60秒です。<br><br>工夫したところは、BGMをつけたところです。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">鹿さんゲーム</h1>
 <div class="main_content">
