--- a/_pages/exhibition/2023-14.md
+++ b/_pages/exhibition/2023-14.md
@@ -3,6 +3,7 @@ layout: default
 title: "心カフェメニューシステム"
 thumbnail: /img/2023/exhibition/14.jpg
 permalink: /expo/14
+description: 毎週日曜日、家族にモーニングを作ってあげています。メニューがあって microbit の Aボタンを押すとf とフードのメニューの数字が増えていき、BボタンはAボタンと同じで、d とドリンクの数字が増える。そして 何にするか決まったら、A+Bを同時に押して、2個目の microbit に送られます。次の microbit に送られた時、2個目の microbit は、うけとったよと音をならします。音がなりおわっても、まだフードとドリンクの数字をまだ見れる様になっています。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">心カフェメニューシステム</h1>
 <div class="main_content">
