--- a/_pages/exhibition/2023-15.md
+++ b/_pages/exhibition/2023-15.md
@@ -3,6 +3,7 @@ layout: default
 title: "お太子ネコの挑戦状！歴史人物なまえクイズ"
 thumbnail: /img/2023/exhibition/15.jpg
 permalink: /expo/15
+description: 本に出ていた漢字クイズをみて、私は歴史が好きなので歴史人物の名前クイズにしたら面白いかなと思いました。<br><br>初級と、私も最初読めなかった名前の歴史人物は上級にしました。<br><br>いつかもっと沢山クイズにしたいです。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">お太子ネコの挑戦状！歴史人物なまえクイズ</h1>
 <div class="main_content">
