--- a/_pages/exhibition/2023-16.md
+++ b/_pages/exhibition/2023-16.md
@@ -3,6 +3,7 @@ layout: default
 title: "yamaguchi_maps"
 thumbnail: /img/2023/exhibition/16.jpg
 permalink: /expo/16
+description: 30,000×30,000ブロック分の山口県のマインクラフトマップを作りました。<br>動画では紹介しきれないほど広いです。<br>起伏図から作ったので50時間くらいかかりました。<br>ちなみに、実際の4分の1くらいのスケールです。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">yamaguchi_maps</h1>
 <div class="main_content">
