--- a/_pages/exhibition/2023-17.md
+++ b/_pages/exhibition/2023-17.md
@@ -3,6 +3,7 @@ layout: default
 title: "モ〜レッツキャッチ！ゲーム"
 thumbnail: /img/2023/exhibition/17.jpg
 permalink: /expo/17
+description: micro:bitの付いた投げ縄を振り回して投げて牛を捕まえるゲームです。投げ縄が牛のツノに引っかかると牛が怒りだします。<br>牛の制作は家族全員でやりました。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">モ〜レッツキャッチ！ゲーム</h1>
 <div class="main_content">
