--- a/_pages/exhibition/2023-18.md
+++ b/_pages/exhibition/2023-18.md
@@ -3,6 +3,7 @@ layout: default
 title: "お金ゲーム"
 thumbnail: /img/2023/exhibition/18.jpg
 permalink: /expo/18
+description: 「お金ゲーム」は、ビスケットで作ったゲームです。落ちてくるお金を並べて、お金の多さを競います。同じお金を横に2つならべると、次のお金に変わり、お金がもらえます。タップして出せるお金は１円から１００円までです。例えば５円と５円をならべると、１０円になり、５円もらえます。最大は１０００円と１０００円がならぶと５０００円になり、1０００円もらます。<br>工夫したところは、「次」でランダムに表示したお金を、タップした時にちゃんと表示するとことです。「割れたメガネ」を使うことで、同じお金が表示されるように工夫しました。<br><br>また、お金を計算するプログラムも「割れたメガネ」を使って工夫しました。「円」という文字に「+1」を重ねたり、位をずらしたりしてプログラムし、正しくお金が増えるようにするところが難しかったです。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">お金ゲーム</h1>
 <div class="main_content">
