--- a/_pages/exhibition/2023-19.md
+++ b/_pages/exhibition/2023-19.md
@@ -3,6 +3,7 @@ layout: default
 title: "名古屋駅シュミレーター"
 thumbnail: /img/2023/exhibition/19.jpg
 permalink: /expo/19
+description: リアルタイムでJR名古屋駅に到着する東海道本線の上り・下り電車を見ることができます。<br>特徴は、リスト数がすごく多いことです。<br>苦労したことは、時刻表のデータをすべてコピーし、メモ帳に貼り付け、◯時の部分を消して、リストに読み込ませ、編集のプログラムを組み、プログラムを通したデータをまた違うリストに読み込ませ、控えを取り、もう一方のデータを同じように変換し、統合のプログラムを組み、データを同じリストに統合させたこと。<br>以上のプログラムを休日と平日の二回やったことです。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">名古屋駅シュミレーター</h1>
 <div class="main_content">
