--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -3,6 +3,7 @@ layout: default
 title: "SC Wars & zss79.jp"
 thumbnail: /img/2023/exhibition/22.jpg
 permalink: /expo/22
+description: SC Warsは、リミックスされることを前提として作っているので、新キャラクターが追加しやすいです。コスチュームを追加して、コスチューム名に必要な情報を入れるだけで、新キャラクターが追加されます。<br>zss79.jpは、slickを使って、スライドショーを作りました。一番苦労したところは、お問合せフォームの、inputタグの部分です。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">SC Wars & zss79.jp</h1>
 <div class="main_content">
