--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -3,6 +3,7 @@ layout: default
 title: "簡単なロブロックスオビー"
 thumbnail: /img/2023/exhibition/4.jpg
 permalink: /expo/4
+description: 簡単過ぎず難しすぎず作りました。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">簡単なロブロックスオビー</h1>
 <div class="main_content">
