--- a/_pages/exhibition/2023-5.md
+++ b/_pages/exhibition/2023-5.md
@@ -3,6 +3,7 @@ layout: default
 title: "蛇ゲーム"
 thumbnail: /img/2023/exhibition/5.jpg
 permalink: /expo/5
+description: 一から作りました。得点を変数ではなくスプライトで表示させました。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">蛇ゲーム</h1>
 <div class="main_content">
