--- a/_pages/exhibition/2023-7.md
+++ b/_pages/exhibition/2023-7.md
@@ -3,6 +3,7 @@ layout: default
 title: "my friendl オリジナル"
 thumbnail: /img/2023/exhibition/7.jpg
 permalink: /expo/7
+description: こわいパペットたちがいるショッピングモールから脱出するゲームです。もともとあるホラーゲームですが、好きなので舞台などを変えて、自分で作ってみました。音声とかゲームオーバー画面を怖くすることにこだわって作りました。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">my friendl オリジナル</h1>
 <div class="main_content">
