--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -3,6 +3,7 @@ layout: default
 title: "シーザー暗号作成読み取り器"
 thumbnail: /img/2023/exhibition/9.jpg
 permalink: /expo/9
+description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを書くにあたって「ROT」の部分は邪魔なので鍵から数字だけを取り出すようにプログラムを書くのを工夫しました。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">シーザー暗号作成読み取り器</h1>
 <div class="main_content">
