--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -3,6 +3,7 @@ layout: default
 title: "コーディングで マレーシアを探索しよう！"
 thumbnail: /img/2023/exhibition/1.jpg
 permalink: /expo/1
+description: 自分が見た景色や模様で、きれいだなと思ったものをJavaScript (p5.js) を使って表現したいと思っています。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コーディングで マレーシアを探索しよう！</h1>
 <div class="main_content">
