--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -3,6 +3,7 @@ layout: default
 title: "scratchタイピング"
 thumbnail: /img/2023/exhibition/2.jpg
 permalink: /expo/2
+description: 出てきた文字を打つタイピングゲームです。<br>この作品は、普通のタイピングゲームとは違い、出てきた英語の通りに打つゲームです。<br>BGMがないと気分が上がらないと思ったので、BGMにこだわりました。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">scratchタイピング</h1>
 <div class="main_content">
