--- a/_pages/exhibition/2023-20.md
+++ b/_pages/exhibition/2023-20.md
@@ -3,6 +3,7 @@ layout: default
 title: "Space Travelers"
 thumbnail: /img/2023/exhibition/20.jpg
 permalink: /expo/20
+description: この作品で工夫したところはキャラクターやアイテムの見た目です。今まではScratchに入っているスプライトをそのまま使っていましたが、今回はそれを加工して使ったり自分でスプライトを作ったりしました。<br>　また、今回は初めてゲームにメニュー画面を作ったり、BGMをネットで探して使ったりしました。BGMや素材は著作権にも気を付けました。<br>日本語がわからない人にも遊んでもらえるように、説明書きやゲームの言語選択に英語を使ったことも工夫した点です。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">Space Travelers</h1>
 <div class="main_content">
