--- a/_pages/exhibition/2023-3.md
+++ b/_pages/exhibition/2023-3.md
@@ -3,6 +3,7 @@ layout: default
 title: "コース攻略したぞ！"
 thumbnail: /img/2023/exhibition/3.jpg
 permalink: /expo/3
+description: 深川小学校の仲良し３人組「りゅうのすけ」「くぼっち」「SOU」です。<br>授業でも導入されている「ｍBot」を使って、自動運転によるコース攻略に挑戦。mBotの機能をフルで使うべく一人１台、合計３台を活用し、①コースを走らせる、②パネルに文字を表示して応援する、③音楽で盛り上げるプログラムを組みました。<br>①「りゅうのすけ」は、走行を担当。ラインセンサーとスピードを工夫して、内側の細いラインのコースを走らせることに成功！<br>②「くぼっち」は、LEDパネルにチーム名や自分たちの名前を表示。見ている人に読みやすい光の配置を工夫！<br>③「SOU」は音楽を担当。何度も聞きながら、音の長さを調整し曲に仕上げ、曲と曲の間に光を入れるなどの工夫も実施！<br>３人で協力し、１つの作品に。パネルの表示と曲は、ｍBotがコース走る時間に合わせてあり、スタートとゴール時に盛り上がりました。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コース攻略したぞ！</h1>
 <div class="main_content">
