--- a/_pages/exhibition/2023-6.md
+++ b/_pages/exhibition/2023-6.md
@@ -3,6 +3,7 @@ layout: default
 title: "シューティングゲーム（はやと）8.9"
 thumbnail: /img/2023/exhibition/6.jpg
 permalink: /expo/6
+description: 中学1年生の、はやとです。<br>昨年からCoderDojo長門に通うようになり、ほかのニンジャがシューティングゲームを創っていたのに刺激されて、今回はscratchでゲームをつくってみました。<br>ゲームをつくるために、ファミコンゲームの「EDF」などを参考にしています。<br>とくに、ゲームに出てくる敵のような「ゆらゆらした動き」になるようにプログラムを考えました。<br>動きを設定する際に、より面白くなるよう「sin」などを使って動かしてみました。<br>いろんなタイプの敵を作り、1つ1つに別の動きを設定して、飽きないようにしました。<br>また、スプライトに変数を言わせて、体力を見えるようにしました<br>全体が動いているように見せるためにスプライトを背景代わりにしました。<br>たくさんの人に楽しんでもらえると嬉しいです。　
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">シューティングゲーム（はやと）8.9</h1>
 <div class="main_content">
