--- a/_pages/exhibition/2023-8.md
+++ b/_pages/exhibition/2023-8.md
@@ -3,6 +3,7 @@ layout: default
 title: "タイマー＆スケジュールアプリ"
 thumbnail: /img/2023/exhibition/8.jpg
 permalink: /expo/8
+description: いつも自分は締切りぎりぎりに何かを一気に終わらせてしまい、出来が悪くなってしまう癖があるので、このアプリを作って、タイマーを使ってきちんと時間内に何かを終わらせられるようにした。それだけでは物足りないので、下に何をいつまでにするべきかを書き、しっかり時間内にそれを終わらせられるようなリストも作ってみた。終わったら左にチェックが打てるので、どこまで達成できているかを知ることができます。これからはこのアプリを使って物事を計画的に終わらせられるようにしたい。
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">タイマー＆スケジュールアプリ</h1>
 <div class="main_content">
