--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -74,6 +74,7 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
    }
   }
   /* scratch wrapper */
+  /*今回スクラッチを埋め込まないためコメントアウト
   @media screen and (max-width: 570px){
     div.scratch-wrapper > iframe {
       position: absolute;
@@ -90,4 +91,5 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
       margin: 10px 20px;
     }
   }
+  */
 </style>
