--- a/_pages/exhibition/2023-25.md
+++ b/_pages/exhibition/2023-25.md
@@ -1,46 +1,46 @@
 ---
 layout: default
-title: "yamaguchi_maps"
-thumbnail: /img/2023/exhibition/16.jpg
-permalink: /expo/16
-description: 30,000×30,000ブロック分の山口県のマインクラフトマップを作りました。<br>動画では紹介しきれないほど広いです。<br>起伏図から作ったので50時間くらいかかりました。<br>ちなみに、実際の4分の1くらいのスケールです。
+title: "micro:bitの演奏会"
+thumbnail: /img/2023/exhibition/25.jpg
+permalink: /expo/25
+description: キラキラ星のホシの所は、上手く描けなかったから、考えて✴︎マークにしました。
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">yamaguchi_maps</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">micro:bitの演奏会</h1>
 <div class="main_content">
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "マインクラフト" contains "Scratch" %}
-{% if "https://youtu.be/GPfSwXAaFSs" contains "https://scratch.mit.edu/projects/" %}
+{% if "電子工作" contains "Scratch" %}
+{% if "https://drive.google.com/file/d/10rsc0l2oFq-6wp4YXUdunKKtB3wUagWx/view?usp=sharing" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://youtu.be/GPfSwXAaFSsembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://drive.google.com/file/d/10rsc0l2oFq-6wp4YXUdunKKtB3wUagWx/view?usp=sharingembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='/img/2023/exhibition/16.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/25.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='/img/2023/exhibition/16.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/25.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
-<a href="https://youtu.be/GPfSwXAaFSs" target="_blank" rel="noopener" >
+<a href="https://drive.google.com/file/d/10rsc0l2oFq-6wp4YXUdunKKtB3wUagWx/view?usp=sharing" target="_blank" rel="noopener" >
   <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
        style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
-       src='/img/2023/exhibition/16.jpg' />
+       src='/img/2023/exhibition/25.jpg' />
 </a>
-<p>クリエイター: けんちゃん(CoderDojo 長門)</p>
+<p>クリエイター: KEi(CoderDojo 奈良、生駒)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
-    <p>30,000×30,000ブロック分の山口県のマインクラフトマップを作りました。<br>動画では紹介しきれないほど広いです。<br>起伏図から作ったので50時間くらいかかりました。<br>ちなみに、実際の4分の1くらいのスケールです。</p>
+    <p>キラキラ星のホシの所は、上手く描けなかったから、考えて✴︎マークにしました。</p>
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>使用したアプリ<br>Medbang Paint Pro...起伏図制作 <br>Worldpainter...読み込み<br>DaVinci Resolve...簡単な動画編集</p>
+    <p>楽譜は、小学校一年生の鍵盤ハーモニカの教科書を参考にしました。</p>
   </div>
 </div>
 </div>
-<a href="https://youtu.be/GPfSwXAaFSs" target="_blank" rel="noopener" class="button air">
+<a href="https://drive.google.com/file/d/10rsc0l2oFq-6wp4YXUdunKKtB3wUagWx/view?usp=sharing" target="_blank" rel="noopener" class="button air">
   <i class="fas fa-scroll"></i>
   作品を見る
 </a>
