--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -74,6 +74,7 @@ description: 簡単過ぎず難しすぎず作りました。
    }
   }
   /* scratch wrapper */
+  /*今回スクラッチを埋め込まないためコメントアウト
   @media screen and (max-width: 570px){
     div.scratch-wrapper > iframe {
       position: absolute;
@@ -90,4 +91,5 @@ description: 簡単過ぎず難しすぎず作りました。
       margin: 10px 20px;
     }
   }
+  */
 </style>
