--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -7,22 +7,6 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">scratchタイピング</h1>
 <div class="main_content">
-
-{% comment %}
-/*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Scratch" contains "Scratch" %}
-{% if "https://scratch.mit.edu/projects/873908710/" contains "https://scratch.mit.edu/projects/" %}
-<div class="scratch-wrapper">
-<iframe src="https://scratch.mit.edu/projects/873908710/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
-{%else%}
-<img class='top-img lazyload' src='/img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-{% endif %}
-{% else %}
-<img class='top-img lazyload' src='/img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-{% endif %}
-{% endcomment %}
-
 <a href="https://scratch.mit.edu/projects/873908710/" target="_blank" rel="noopener" >
   <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
        style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
@@ -46,13 +30,6 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
 </a>
 
 <style type="text/css">
-  /* 使っていないスタイルのため一時的にコメントアウト
-  .prev { display: table-cell; color: white; text-align: left;   }
-  .toc  { display: table-cell; color: white; text-align: center; }
-  .next { display: table-cell; color: white; text-align: right;  }
-  .nav a:link, .nav a:visited { color: white; }
-  */
-  iframe{margin: 0 auto}
   .box{width:auto; margin: 0 auto;padding-bottom:20px;}
   .box h5{text-align: left;}
   .box p{text-align: left;}
@@ -73,8 +50,10 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
      width: 80%;
    }
   }
-  /* scratch wrapper */
-  /*今回スクラッチを埋め込まないためコメントアウト
+  
+  /* Scratch wrapper */
+  /* スクラッチ埋め込みは未実装のためコメントアウト
+  iframe{margin: 0 auto}
   @media screen and (max-width: 570px){
     div.scratch-wrapper > iframe {
       position: absolute;
@@ -92,4 +71,26 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
     }
   }
   */
+  /* 隣の作品へのナビゲーションバー */
+  /* ナビゲーションは未実装のためコメントアウト
+  .prev { display: table-cell; color: white; text-align: left;   }
+  .toc  { display: table-cell; color: white; text-align: center; }
+  .next { display: table-cell; color: white; text-align: right;  }
+  .nav a:link, .nav a:visited { color: white; }
+  */
 </style>
+
+{% comment %}
+/* スクラッチの埋め込みをしたい場合に用いる。*/
+{% if "Scratch" contains "Scratch" %}
+{% if "https://scratch.mit.edu/projects/873908710/" contains "https://scratch.mit.edu/projects/" %}
+<div class="scratch-wrapper">
+<iframe src="https://scratch.mit.edu/projects/873908710/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
+{%else%}
+<img class='top-img lazyload' src='/img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+{% endif %}
+{% else %}
+<img class='top-img lazyload' src='/img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+{% endif %}
+{% endcomment %}
