--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -24,16 +24,23 @@ description: SC Warsは、リミックスされることを前提として作っ
   </div>
 </div>
 </div>
-<a href="https://drive.google.com/file/d/1n5AJfkBYEtcBRHdThvMJTJFvT2m-xoKW/view?usp=drive_link" target="_blank" rel="noopener" class="button air">
-  <i class="fas fa-scroll"></i>
-  作品を見る
-</a>
+
+<div style='margin-bottom: 100px;'>
+  <a href="https://drive.google.com/file/d/1n5AJfkBYEtcBRHdThvMJTJFvT2m-xoKW/view?usp=drive_link" target="_blank" rel="noopener" class="button air">
+    <i class="fas fa-scroll"></i>
+    作品を見る
+  </a>
+  <a href="https://twitter.com/intent/tweet?hashtags=DojoConJapan,CoderDojo&url=/expo/22&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button air">
+    <i class="fab fa-twitter"></i>
+    作品を共有する
+  </a>
+</div>
 
 <style type="text/css">
   .box{width:auto; margin: 0 auto;padding-bottom:20px;}
   .box h5{text-align: left;}
   .box p{text-align: left;}
-  a.air{margin-bottom:100px;}
+  a.air{margin-bottom: 50px;}
   a.air{text-decoration: none;}
   .contents{width:auto; margin: 0 auto;padding:5px;}
   /*content*/
@@ -50,7 +57,7 @@ description: SC Warsは、リミックスされることを前提として作っ
      width: 80%;
    }
   }
-  
+
   /* Scratch wrapper */
   /* スクラッチ埋め込みは未実装のためコメントアウト
   iframe{margin: 0 auto}
