--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -24,16 +24,23 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
   </div>
 </div>
 </div>
-<a href="https://scratch.mit.edu/projects/706260024/" target="_blank" rel="noopener" class="button air">
-  <i class="fas fa-scroll"></i>
-  作品を見る
-</a>
+
+<div style='margin-bottom: 100px;'>
+  <a href="https://scratch.mit.edu/projects/706260024/" target="_blank" rel="noopener" class="button air">
+    <i class="fas fa-scroll"></i>
+    作品を見る
+  </a>
+  <a href="https://twitter.com/intent/tweet?hashtags=DojoConJapan,CoderDojo&url=/expo/9&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button air">
+    <i class="fab fa-twitter"></i>
+    作品を共有する
+  </a>
+</div>
 
 <style type="text/css">
   .box{width:auto; margin: 0 auto;padding-bottom:20px;}
   .box h5{text-align: left;}
   .box p{text-align: left;}
-  a.air{margin-bottom:100px;}
+  a.air{margin-bottom: 50px;}
   a.air{text-decoration: none;}
   .contents{width:auto; margin: 0 auto;padding:5px;}
   /*content*/
@@ -50,7 +57,7 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
      width: 80%;
    }
   }
-  
+
   /* Scratch wrapper */
   /* スクラッチ埋め込みは未実装のためコメントアウト
   iframe{margin: 0 auto}
