--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -32,7 +32,7 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
     <i class="fas fa-scroll"></i>
     作品を見る
   </a>
-  <a href="https://twitter.com/intent/tweet?text={{ page.title }}+%7C+ニンジャ大博覧会&hashtags=DojoConJapan,CoderDojo&url={{ site.url }}/expo/2&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button air">
+  <a href="https://twitter.com/intent/tweet?text={{ page.title | url_encode }}+%7C+ニンジャ大博覧会&hashtags=DojoConJapan,CoderDojo&url={{ site.url }}/expo/2&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button air">
     <i class="fab fa-twitter"></i>
     作品を共有する
   </a>
