ymlを更新し戻るボタン、次の作品に移るボタンを追加しました。

--- a/_pages/exhibition/2023-29.md
+++ b/_pages/exhibition/2023-29.md
@@ -1,65 +1,65 @@
 ---
 layout: default
-title: "space shooter"
-thumbnail: /img/2023/exhibition/23.jpg
-permalink: /expo/23
-description: タイトル通りのシューティングゲームです。<br>マウスで照準を動かしてスペースを押して敵を倒すゲームです。<br>タイマー制です。<br>nキー、mキーを使ってbgmの、eキー、sキーを使ってサウンドのオンオフが変えられます。<br>敵のビジュアルとシューティングの仕様はリズム天国から着想を得ました。
+title: "『かんづめ食堂』オープン！！"
+thumbnail: /img/2023/exhibition/29.jpg
+permalink: /expo/29
+description: 『かんづめ食堂』のウェブサイトを作りました。缶詰や非常食を使ったレシピを公開していくウェブサイトです。
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">space shooter</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">『かんづめ食堂』オープン！！</h1>
 <div class="main_content">
-  <a href="https://scratch.mit.edu/projects/880341853/" target="_blank" rel="noopener" >
+  <a href="https://youtu.be/DiLG9r_3tLw" target="_blank" rel="noopener" >
     <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
-         src='/img/2023/exhibition/23.jpg' />
+         src='/img/2023/exhibition/29.jpg' />
   </a>
 
-  <p>クリエイター: mryo41(CoderDojo 猪名川)</p>
+  <p>クリエイター: YUZU(CoderDojo 梅田/西宮)</p>
   <div class="contents">
     <div class="box">
       <h5>作品の説明</h5>
-      <p>タイトル通りのシューティングゲームです。<br>マウスで照準を動かしてスペースを押して敵を倒すゲームです。<br>タイマー制です。<br>nキー、mキーを使ってbgmの、eキー、sキーを使ってサウンドのオンオフが変えられます。<br>敵のビジュアルとシューティングの仕様はリズム天国から着想を得ました。</p>
+      <p>『かんづめ食堂』のウェブサイトを作りました。缶詰や非常食を使ったレシピを公開していくウェブサイトです。</p>
     </div>
 
     <div class="box">
       <h5>参考・参照元、工夫したところ</h5>
-      <p>参考にしたプロジェクトはありません。</p>
+      <p>ウェブサイトを企画してHTMLを覚えて、動画編集やAIを使った画像生成など、いろいろなはじめてにチャレンジしました。</p>
     </div>
   </div>
 </div>
 
 <div>
-  <a href="https://scratch.mit.edu/projects/880341853/" target="_blank" rel="noopener" class="button air">
+  <a href="https://youtu.be/DiLG9r_3tLw" target="_blank" rel="noopener" class="button air">
     <i class="fas fa-scroll"></i>
     作品を見る
   </a>
-  <a href="https://twitter.com/intent/tweet?text={{ page.title | replace: '&', '%26' }}+%7C+ニンジャ大博覧会&hashtags=DojoConJapan,CoderDojo&url={{ site.url }}/expo/23&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button">
+  <a href="https://twitter.com/intent/tweet?text={{ page.title | replace: '&', '%26' }}+%7C+ニンジャ大博覧会&hashtags=DojoConJapan,CoderDojo&url={{ site.url }}/expo/29&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button">
     <i class="fab fa-twitter"></i>
     作品を共有する
   </a>
 </div>
 <div class="content main_content">
-<a href="/exhibition#23" class="back-to-top text-left" style="margin-top: 20px;"><i class="fas fa-chevron-circle-left"></i>作品一覧に戻る</a>
+<a href="/exhibition#29" class="back-to-top text-left" style="margin-top: 20px;"><i class="fas fa-chevron-circle-left"></i>作品一覧に戻る</a>
 </div>
 <!-- ↓ここの数字は作品が増えた場合に変更する。 -->
-{% if 23==30 %}
+{% if 29==30 %}
 <div class="article-navigation" style="margin-bottom: 100px;">
-    <a href="/expo/22" class="previous-article">&lt; 前の記事へ</a>
+    <a href="/expo/28" class="previous-article">&lt; 前の記事へ</a>
     &nbsp;・&nbsp; <!-- 中間の・ -->
     <a href="/expo/1" class="next-article">次の記事へ &gt;</a>
   </div>
 {% else %}
-{% if 23==1 %}
+{% if 29==1 %}
 <div class="article-navigation" style="margin-bottom: 100px;">
 <!-- ↓ここの数字は作品が増えた場合に変更する。 -->
   <a href="/expo/30" class="previous-article">&lt; 前の記事へ</a>
   &nbsp;・&nbsp; <!-- 中間の・ -->
-  <a href="/expo/24" class="next-article">次の記事へ &gt;</a>
+  <a href="/expo/30" class="next-article">次の記事へ &gt;</a>
 </div>
 {%else%}
 <div class="article-navigation" style="margin-bottom: 100px;">
-  <a href="/expo/22" class="previous-article">&lt; 前の記事へ</a>
+  <a href="/expo/28" class="previous-article">&lt; 前の記事へ</a>
   &nbsp;・&nbsp; <!-- 中間の・ -->
-  <a href="/expo/24" class="next-article">次の記事へ &gt;</a>
+  <a href="/expo/30" class="next-article">次の記事へ &gt;</a>
 </div>
 {% endif %}
 {% endif %}
@@ -134,15 +134,15 @@ description: タイトル通りのシューティングゲームです。<br>マ
 
 {% comment %}
 /* スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Scratch" contains "Scratch" %}
-{% if "https://scratch.mit.edu/projects/880341853/" contains "https://scratch.mit.edu/projects/" %}
+{% if "Webサイト" contains "Scratch" %}
+{% if "https://youtu.be/DiLG9r_3tLw" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://scratch.mit.edu/projects/880341853/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://youtu.be/DiLG9r_3tLwembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='/img/2023/exhibition/23.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/29.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='/img/2023/exhibition/23.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/29.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
