--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -43,23 +43,23 @@ description: SC Warsは、リミックスされることを前提として作っ
 <!-- ↓ここの数字は作品が増えた場合に変更する。 -->
 {% if 22==30 %}
 <div class="article-navigation" style="margin-bottom: 100px;">
-    <a href="/expo/21" class="previous-article">&lt; 前の記事へ</a>
+    <a href="/expo/21" class="previous-article">&lt; 前の作品へ</a>
     &nbsp;・&nbsp; <!-- 中間の・ -->
-    <a href="/expo/1" class="next-article">次の記事へ &gt;</a>
+    <a href="/expo/1" class="next-article">次の作品へ &gt;</a>
   </div>
 {% else %}
 {% if 22==1 %}
 <div class="article-navigation" style="margin-bottom: 100px;">
 <!-- ↓ここの数字は作品が増えた場合に変更する。 -->
-  <a href="/expo/30" class="previous-article">&lt; 前の記事へ</a>
+  <a href="/expo/30" class="previous-article">&lt; 前の作品へ</a>
   &nbsp;・&nbsp; <!-- 中間の・ -->
-  <a href="/expo/23" class="next-article">次の記事へ &gt;</a>
+  <a href="/expo/23" class="next-article">次の作品へ &gt;</a>
 </div>
 {%else%}
 <div class="article-navigation" style="margin-bottom: 100px;">
-  <a href="/expo/21" class="previous-article">&lt; 前の記事へ</a>
+  <a href="/expo/21" class="previous-article">&lt; 前の作品へ</a>
   &nbsp;・&nbsp; <!-- 中間の・ -->
-  <a href="/expo/23" class="next-article">次の記事へ &gt;</a>
+  <a href="/expo/23" class="next-article">次の作品へ &gt;</a>
 </div>
 {% endif %}
 {% endif %}
