--- a/_pages/exhibition/2023-27.md
+++ b/_pages/exhibition/2023-27.md
@@ -3,7 +3,7 @@ layout: default
 title: "こうちゃんの建築物［屋敷］"
 thumbnail: /img/2023/exhibition/27.jpg
 permalink: /expo/27
-description: この作品は屋敷をイメージして作った物です<br><br>・こだわりポイント<br><br>桜の木の本数を調節して作りました。<br><br>入り口の門にこだわりました<br><br>門の水辺の橋の丸い部分に凄くこだわりました<br><br>あと蓮の葉の置く位置と小さなドリップリーフの置く場所にこだわりました<br><br>・苦労したところ<br><br>石の道の砂利とか池と池の魚の量の調節が大変でした<br><br>あと庭の草は一つ一つ置きましたのでその作業に時間をとられました<br><br>それと屋根の敷き詰めと床を敷き詰めるのは結構大変でした
+description: この作品は屋敷をイメージして作った物です<br>・こだわりポイント<<br>桜の木の本数を調節して作りました。<br>入り口の門にこだわりました<br>門の水辺の橋の丸い部分に凄くこだわりました<br>あと蓮の葉の置く位置と小さなドリップリーフの置く場所にこだわりました<br>・苦労したところ<br>石の道の砂利とか池と池の魚の量の調節が大変でした<br>あと庭の草は一つ一つ置きましたのでその作業に時間をとられました<br>それと屋根の敷き詰めと床を敷き詰めるのは結構大変でした
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">こうちゃんの建築物［屋敷］</h1>
 <div class="main_content">
@@ -17,7 +17,7 @@ description: この作品は屋敷をイメージして作った物です<br><br
   <div class="contents">
     <div class="box">
       <h5>作品の説明</h5>
-      <p>この作品は屋敷をイメージして作った物です<br><br>・こだわりポイント<br><br>桜の木の本数を調節して作りました。<br><br>入り口の門にこだわりました<br><br>門の水辺の橋の丸い部分に凄くこだわりました<br><br>あと蓮の葉の置く位置と小さなドリップリーフの置く場所にこだわりました<br><br>・苦労したところ<br><br>石の道の砂利とか池と池の魚の量の調節が大変でした<br><br>あと庭の草は一つ一つ置きましたのでその作業に時間をとられました<br><br>それと屋根の敷き詰めと床を敷き詰めるのは結構大変でした</p>
+      <p>この作品は屋敷をイメージして作った物です<br>・こだわりポイント<<br>桜の木の本数を調節して作りました。<br>入り口の門にこだわりました<br>門の水辺の橋の丸い部分に凄くこだわりました<br>あと蓮の葉の置く位置と小さなドリップリーフの置く場所にこだわりました<br>・苦労したところ<br>石の道の砂利とか池と池の魚の量の調節が大変でした<br>あと庭の草は一つ一つ置きましたのでその作業に時間をとられました<br>それと屋根の敷き詰めと床を敷き詰めるのは結構大変でした</p>
     </div>
 
     <div class="box">
@@ -41,7 +41,7 @@ description: この作品は屋敷をイメージして作った物です<br><br
 <a href="/exhibition#27" class="back-to-top text-left" style="margin-top: 20px;"><i class="fas fa-chevron-circle-left"></i>作品一覧に戻る</a>
 </div>
 <!-- ↓ここの数字は作品が増えた場合に変更する。 -->
-{% if 27==30 %}
+{% if 27==31 %}
 <div class="article-navigation" style="margin-bottom: 100px;">
     <a href="/expo/26" class="previous-article">&lt; 前の作品へ</a>
     &nbsp;・&nbsp; <!-- 中間の・ -->
@@ -51,7 +51,7 @@ description: この作品は屋敷をイメージして作った物です<br><br
 {% if 27==1 %}
 <div class="article-navigation" style="margin-bottom: 100px;">
 <!-- ↓ここの数字は作品が増えた場合に変更する。 -->
-  <a href="/expo/30" class="previous-article">&lt; 前の作品へ</a>
+  <a href="/expo/31" class="previous-article">&lt; 前の作品へ</a>
   &nbsp;・&nbsp; <!-- 中間の・ -->
   <a href="/expo/28" class="next-article">次の作品へ &gt;</a>
 </div>
