--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -12,8 +12,8 @@ description: 簡単過ぎず難しすぎず作りました。
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
          src='/img/2023/exhibition/4.jpg' />
   </a>
-
   <p>クリエイター: がんにゃむ(CoderDojo 奈良)</p>
+
   <div class="contents">
     <div class="box">
       <h5>作品の説明</h5>
@@ -52,12 +52,12 @@ description: 簡単過ぎず難しすぎず作りました。
 </div>
 
 <style type="text/css">
-  .box{width:auto; margin: 0 auto;padding-bottom:20px;}
-  .box h5{text-align: left;}
-  .box p{text-align: left;}
-  a.air{margin-bottom: 50px;}
-  a.air{text-decoration: none;}
-  .contents{width:auto; margin: 0 auto;padding:5px;}
+  .box { width:auto; margin: 50px auto 30px; }
+  .box h5 { text-align: left; }
+  .box p {  text-align: left; }
+  a.air { margin-bottom: 50px; }
+  a.air { text-decoration: none; }
+  .contents{ width:auto; margin: 0 auto;padding:5px; }
   /*content*/
   .main_content{
     display: block;
