Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -22,7 +22,7 @@ description: SC Warsは、リミックスされることを前提として作っ
 
     <div class="box">
       <h5>参考・参照元、工夫したところ</h5>
-      <p>SC Wars：にゃんこ大戦争 https://www.ponos.jp/</p>
+      <p>SC Wars：にゃんこ大戦争 <a href="https://www.ponos.jp/">https://www.ponos.jp/</a></p>
     </div>
   </div>
 </div>
