Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -52,6 +52,7 @@ description: 簡単過ぎず難しすぎず作りました。
 </div>
 
 <style type="text/css">
+  /* 作品説明などのスタイル */
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
@@ -59,7 +60,6 @@ description: 簡単過ぎず難しすぎず作りました。
   a.air { margin-bottom: 50px; }
   a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
-  /*content*/
   .main_content{
     display: block;
     margin: 0 auto 12px;
@@ -74,64 +74,21 @@ description: 簡単過ぎず難しすぎず作りました。
    }
   }
 
-  /* Scratch wrapper */
-  /* スクラッチ埋め込みは未実装のためコメントアウト
-  iframe{margin: 0 auto}
-  @media screen and (max-width: 570px){
-    div.scratch-wrapper > iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    div.scratch-wrapper {
-      position: relative;
-      padding-bottom: 79%;
-      height: 0;
-      overflow: hidden;
-      margin: 10px 20px;
-    }
-  }
+  /* 前後の作品へのナビゲーションバー */
   .article-navigation {
     text-align: center;
     margin: 20px 0;
   }
-
   .article-navigation a {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #7e2639;
     color: white;
     text-decoration: none;
     border-radius: 5px;
     margin: 0 10px;
   }
-
   .article-navigation a:hover {
-    background-color: #0056b3;
+    text-decoration: underline;
   }
-  */
-  /* 隣の作品へのナビゲーションバー */
-  /* ナビゲーションは未実装のためコメントアウト
-  .prev { display: table-cell; color: white; text-align: left;   }
-  .toc  { display: table-cell; color: white; text-align: center; }
-  .next { display: table-cell; color: white; text-align: right;  }
-  .nav a:link, .nav a:visited { color: white; }
-  */
 </style>
-
-{% comment %}
-/* スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Webサイト" contains "Scratch" %}
-{% if "https://www.youtube.com/watch?v=Tm5P76jfjuk" contains "https://scratch.mit.edu/projects/" %}
-<div class="scratch-wrapper">
-<iframe src="https://www.youtube.com/watch?v=Tm5P76jfjukembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
-{%else%}
-<img class='top-img lazyload' src='/img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-{% endif %}
-{% else %}
-<img class='top-img lazyload' src='/img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-{% endif %}
-{% endcomment %}
