Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -46,9 +46,16 @@ description: SC Warsは、リミックスされることを前提として作っ
 </div>
 
 <div class="article-navigation" style="margin-bottom: 100px;">
-  <a href="/expo/21" class="previous-article">&lt; 前の作品へ</a>
-  &nbsp;・&nbsp;
-  <a href="/expo/23" class="next-article">次の作品へ &gt;</a>
+  <a href="/expo/21" title="世界一難しいゲームを再現しました" style="margin-right: 20px;">
+    <i class="fas fa-arrow-left"></i>
+    前の作品へ<br>
+    <span style="font-size: 8px;">世界一難しいゲームを再...</span>
+  </a>
+  <a href="/expo/23" title="space shooter" style="margin-left: 20px;">
+    次の作品へ
+    <i class="fas fa-arrow-right"></i><br>
+    <span style="font-size: 8px;">space shoot...</span>
+  </a>
 </div>
 
 <style type="text/css">
