--- a/_pages/exhibition/2023-27.md
+++ b/_pages/exhibition/2023-27.md
@@ -46,9 +46,16 @@ description: この作品は屋敷をイメージして作った物です<br>・
 </div>
 
 <div class="article-navigation" style="margin-bottom: 100px;">
-  <a href="/expo/26" class="previous-article">&lt; 前の作品へ</a>
-  &nbsp;・&nbsp;
-  <a href="/expo/28" class="next-article">次の作品へ &gt;</a>
+  <a href="/expo/26" title="マイクラ映画「終戦の護衛艦」他一本" style="margin-right: 20px;">
+    <i class="fas fa-arrow-left"></i>
+    前の作品へ<br>
+    <span style="font-size: 8px;">マイクラ映画「終戦の護...</span>
+  </a>
+  <a href="/expo/28" title="FukuyamaCastle祝400歳!" style="margin-left: 20px;">
+    次の作品へ
+    <i class="fas fa-arrow-right"></i><br>
+    <span style="font-size: 8px;">FukuyamaCas...</span>
+  </a>
 </div>
 
 <style type="text/css">
