--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -46,9 +46,16 @@ description: 簡単過ぎず難しすぎず作りました。
 </div>
 
 <div class="article-navigation" style="margin-bottom: 100px;">
-  <a href="/expo/3" class="previous-article">&lt; 前の作品へ</a>
-  &nbsp;・&nbsp;
-  <a href="/expo/5" class="next-article">次の作品へ &gt;</a>
+  <a href="/expo/3" title="コース攻略したぞ！" style="margin-right: 20px;">
+    <i class="fas fa-arrow-left"></i>
+    前の作品へ<br>
+    <span style="font-size: 8px;">コース攻略したぞ！</span>
+  </a>
+  <a href="/expo/5" title="蛇ゲーム" style="margin-left: 20px;">
+    次の作品へ
+    <i class="fas fa-arrow-right"></i><br>
+    <span style="font-size: 8px;">蛇ゲーム</span>
+  </a>
 </div>
 
 <style type="text/css">
