--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -46,9 +46,16 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
 </div>
 
 <div class="article-navigation" style="margin-bottom: 100px;">
-  <a href="/expo/8" class="previous-article">&lt; 前の作品へ</a>
-  &nbsp;・&nbsp;
-  <a href="/expo/10" class="next-article">次の作品へ &gt;</a>
+  <a href="/expo/8" title="タイマー＆スケジュールアプリ" style="margin-right: 20px;">
+    <i class="fas fa-arrow-left"></i>
+    前の作品へ<br>
+    <span style="font-size: 8px;">タイマー＆スケジュール...</span>
+  </a>
+  <a href="/expo/10" title="アップアップシューティング" style="margin-left: 20px;">
+    次の作品へ
+    <i class="fas fa-arrow-right"></i><br>
+    <span style="font-size: 8px;">アップアップシューティ...</span>
+  </a>
 </div>
 
 <style type="text/css">
