Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -12,7 +12,10 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
          src='/img/2023/exhibition/2.jpg' />
   </a>
-  <p>クリエイター: Megane-kun28(CoderDojo 大船)</p>
+  <p>
+    クリエイター: Megane-kun28
+    (CoderDojo 大船)
+  </p>
 
   <div class="contents">
     <div class="box">
