--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -12,7 +12,10 @@ description: SC Warsは、リミックスされることを前提として作っ
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
          src='/img/2023/exhibition/22.jpg' />
   </a>
-  <p>クリエイター: zss79(CoderDojo )</p>
+  <p>
+    クリエイター: zss79
+    (CoderDojo 富山)
+  </p>
 
   <div class="contents">
     <div class="box">
