--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -12,7 +12,10 @@ description: 簡単過ぎず難しすぎず作りました。
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
          src='/img/2023/exhibition/4.jpg' />
   </a>
-  <p>クリエイター: がんにゃむ(CoderDojo 奈良)</p>
+  <p>
+    クリエイター: がんにゃむ
+    (CoderDojo 奈良)
+  </p>
 
   <div class="contents">
     <div class="box">
