--- a/_pages/exhibition/2023-23.md
+++ b/_pages/exhibition/2023-23.md
@@ -12,7 +12,10 @@ description: タイトル通りのシューティングゲームです。<br>マ
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
          src='/img/2023/exhibition/23.jpg' />
   </a>
-  <p>クリエイター: mryo41(CoderDojo 猪名川)</p>
+  <p>
+    クリエイター: mryo41
+    (CoderDojo 猪名川)
+  </p>
 
   <div class="contents">
     <div class="box">
