--- a/_pages/exhibition/2023-27.md
+++ b/_pages/exhibition/2023-27.md
@@ -12,7 +12,10 @@ description: この作品は屋敷をイメージして作った物です<br>・
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
          src='/img/2023/exhibition/27.jpg' />
   </a>
-  <p>クリエイター: こうちゃん(CoderDojo 小平)</p>
+  <p>
+    クリエイター: こうちゃん
+    (CoderDojo 小平)
+  </p>
 
   <div class="contents">
     <div class="box">
