--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -12,7 +12,10 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
          style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
          src='/img/2023/exhibition/9.jpg' />
   </a>
-  <p>クリエイター: yo_o(CoderDojo 師勝,名古屋)</p>
+  <p>
+    クリエイター: yo_o
+    (CoderDojo 師勝,名古屋)
+  </p>
 
   <div class="contents">
     <div class="box">
