Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-23.md
+++ b/_pages/exhibition/2023-23.md
@@ -14,7 +14,7 @@ description: タイトル通りのシューティングゲームです。<br>マ
   </a>
   <p>
     クリエイター: mryo41
-    (CoderDojo 猪名川)
+    <small>(CoderDojo <a href='https://www.facebook.com/coderdojoinagawa/'>猪名川</a>)</small>
   </p>
 
   <div class="contents">
@@ -66,8 +66,8 @@ description: タイトル通りのシューティングゲームです。<br>マ
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
-  .box a  { color: #7e2639;   }
-  a.air { margin-bottom: 50px; }
+  a     { color: #7e2639;        }
+  a.air { margin-bottom: 50px;   }
   a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
