--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -14,7 +14,7 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
   </a>
   <p>
     クリエイター: yo_o
-    (CoderDojo 師勝,名古屋)
+    <small>(CoderDojo <a href='https://twitter.com/CoderDojoSikatu'>師勝</a>, <a href='https://coderdojo-nagoya.connpass.com/'>名古屋</a>)</small>
   </p>
 
   <div class="contents">
@@ -66,8 +66,8 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
-  .box a  { color: #7e2639;   }
-  a.air { margin-bottom: 50px; }
+  a     { color: #7e2639;        }
+  a.air { margin-bottom: 50px;   }
   a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
