--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -14,7 +14,7 @@ description: SC Warsは、リミックスされることを前提として作っ
   </a>
   <p>
     クリエイター: zss79
-    (CoderDojo 富山)
+    <small>(CoderDojo <a href='https://toyamanagaejp.wixsite.com/website'>富山</a>)</small>
   </p>
 
   <div class="contents">
@@ -66,8 +66,8 @@ description: SC Warsは、リミックスされることを前提として作っ
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
-  .box a  { color: #7e2639;   }
-  a.air { margin-bottom: 50px; }
+  a     { color: #7e2639;        }
+  a.air { margin-bottom: 50px;   }
   a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
