--- a/_pages/exhibition/2023-27.md
+++ b/_pages/exhibition/2023-27.md
@@ -14,7 +14,7 @@ description: この作品は屋敷をイメージして作った物です<br>・
   </a>
   <p>
     クリエイター: こうちゃん
-    (CoderDojo 小平)
+    <small>(CoderDojo <a href='https://coderdojo-kodaira.github.io/'>こだいら</a>)</small>
   </p>
 
   <div class="contents">
@@ -66,8 +66,8 @@ description: この作品は屋敷をイメージして作った物です<br>・
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
-  .box a  { color: #7e2639;   }
-  a.air { margin-bottom: 50px; }
+  a     { color: #7e2639;        }
+  a.air { margin-bottom: 50px;   }
   a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
