--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -14,7 +14,7 @@ description: 簡単過ぎず難しすぎず作りました。
   </a>
   <p>
     クリエイター: がんにゃむ
-    (CoderDojo 奈良)
+    <small>(CoderDojo <a href='https://coderdojo-nara-ikoma.github.io/'>奈良</a>)</small>
   </p>
 
   <div class="contents">
@@ -66,8 +66,8 @@ description: 簡単過ぎず難しすぎず作りました。
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
-  .box a  { color: #7e2639;   }
-  a.air { margin-bottom: 50px; }
+  a     { color: #7e2639;        }
+  a.air { margin-bottom: 50px;   }
   a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
