Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -13,7 +13,7 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
          src='/img/2023/exhibition/2.jpg' />
   </a>
   <p>
-    クリエイター: Megane-kun28
+    作者: Megane-kun28
     <small>(CoderDojo <a href='https://www.facebook.com/CoderDojoOfuna/'>大船</a>)</small>
   </p>
 
