--- a/_pages/exhibition/2023-23.md
+++ b/_pages/exhibition/2023-23.md
@@ -13,7 +13,7 @@ description: タイトル通りのシューティングゲームです。<br>マ
          src='/img/2023/exhibition/23.jpg' />
   </a>
   <p>
-    クリエイター: mryo41
+    作者: mryo41
     <small>(CoderDojo <a href='https://www.facebook.com/coderdojoinagawa/'>猪名川</a>)</small>
   </p>
 
