--- a/_pages/exhibition/2023-27.md
+++ b/_pages/exhibition/2023-27.md
@@ -13,7 +13,7 @@ description: この作品は屋敷をイメージして作った物です<br>・
          src='/img/2023/exhibition/27.jpg' />
   </a>
   <p>
-    クリエイター: こうちゃん
+    作者: こうちゃん
     <small>(CoderDojo <a href='https://coderdojo-kodaira.github.io/'>こだいら</a>)</small>
   </p>
 
