--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -13,7 +13,7 @@ description: 簡単過ぎず難しすぎず作りました。
          src='/img/2023/exhibition/4.jpg' />
   </a>
   <p>
-    クリエイター: がんにゃむ
+    作者: がんにゃむ
     <small>(CoderDojo <a href='https://coderdojo-nara-ikoma.github.io/'>奈良</a>)</small>
   </p>
 
