--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -13,7 +13,7 @@ description: SC Warsは、リミックスされることを前提として作っ
          src='/img/2023/exhibition/22.jpg' />
   </a>
   <p>
-    クリエイター: zss79
+    作者: zss79
     <small>(CoderDojo <a href='https://toyamanagaejp.wixsite.com/website'>富山</a>)</small>
   </p>
 
