Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -31,7 +31,7 @@ description: 簡単過ぎず難しすぎず作りました。
 </div>
 
 <div>
-  <a href="https://www.youtube.com/watch?v=Tm5P76jfjuk" target="_blank" rel="noopener" class="button air">
+  <a href="https://www.youtube.com/watch?v=Tm5P76jfjuk" target="_blank" rel="noopener" class="button" style="margin-bottom: 50px;">
     <i class="fas fa-scroll"></i>
     作品を見る
   </a>
@@ -67,8 +67,6 @@ description: 簡単過ぎず難しすぎず作りました。
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
   a     { color: #7e2639;        }
-  a.air { margin-bottom: 50px;   }
-  a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
     display: block;
