--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -31,7 +31,7 @@ description: SC Warsは、リミックスされることを前提として作っ
 </div>
 
 <div>
-  <a href="https://drive.google.com/file/d/1n5AJfkBYEtcBRHdThvMJTJFvT2m-xoKW/view?usp=drive_link" target="_blank" rel="noopener" class="button air">
+  <a href="https://drive.google.com/file/d/1n5AJfkBYEtcBRHdThvMJTJFvT2m-xoKW/view?usp=drive_link" target="_blank" rel="noopener" class="button" style="margin-bottom: 50px;">
     <i class="fas fa-scroll"></i>
     作品を見る
   </a>
@@ -67,8 +67,6 @@ description: SC Warsは、リミックスされることを前提として作っ
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
   a     { color: #7e2639;        }
-  a.air { margin-bottom: 50px;   }
-  a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
     display: block;
