--- a/_pages/exhibition/2023-23.md
+++ b/_pages/exhibition/2023-23.md
@@ -31,7 +31,7 @@ description: タイトル通りのシューティングゲームです。<br>マ
 </div>
 
 <div>
-  <a href="https://scratch.mit.edu/projects/880341853/" target="_blank" rel="noopener" class="button air">
+  <a href="https://scratch.mit.edu/projects/880341853/" target="_blank" rel="noopener" class="button" style="margin-bottom: 50px;">
     <i class="fas fa-scroll"></i>
     作品を見る
   </a>
@@ -67,8 +67,6 @@ description: タイトル通りのシューティングゲームです。<br>マ
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
   a     { color: #7e2639;        }
-  a.air { margin-bottom: 50px;   }
-  a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
     display: block;
