--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -31,7 +31,7 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
 </div>
 
 <div>
-  <a href="https://scratch.mit.edu/projects/706260024/" target="_blank" rel="noopener" class="button air">
+  <a href="https://scratch.mit.edu/projects/706260024/" target="_blank" rel="noopener" class="button" style="margin-bottom: 50px;">
     <i class="fas fa-scroll"></i>
     作品を見る
   </a>
@@ -67,8 +67,6 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
   a     { color: #7e2639;        }
-  a.air { margin-bottom: 50px;   }
-  a.air { text-decoration: none; }
   .contents{ width:auto; margin: 0 auto;padding:5px; }
   .main_content{
     display: block;
