--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -66,8 +66,12 @@ description: SC Warsは、リミックスされることを前提として作っ
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
-  a     { color: #7e2639;        }
-  .contents{ width:auto; margin: 0 auto;padding:5px; }
+  .box a  { color: #7e2639;   }
+  .contents {
+    width:   auto;
+    margin:  0 auto;
+    padding: 5px;
+  }
   .main_content{
     display: block;
     margin: 0 auto 12px;
@@ -77,9 +81,9 @@ description: SC Warsは、リミックスされることを前提として作っ
   }
   @media screen and (max-width: 1000px) {
     .main_content {
-     padding: 8px 0;
-     width: 80%;
-   }
+      padding: 8px 0;
+      width: 80%;
+    }
   }
 
   /* 前後の作品へのナビゲーションバー */
