Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -42,7 +42,7 @@ description: 出てきた文字を打つタイピングゲームです。<br>こ
 </div>
 
 <div class="content main_content">
-  <a href="/exhibition#2" class="back-to-top text-left" style="margin: 50px auto;">
+  <a href="/exhibition" class="back-to-top text-left" style="margin: 50px auto;">
     <i class="fas fa-chevron-circle-left"></i>
     作品一覧に戻る
   </a>
