--- a/_pages/exhibition/2023-22.md
+++ b/_pages/exhibition/2023-22.md
@@ -42,7 +42,7 @@ description: SC Warsは、リミックスされることを前提として作っ
 </div>
 
 <div class="content main_content">
-  <a href="/exhibition#22" class="back-to-top text-left" style="margin: 50px auto;">
+  <a href="/exhibition" class="back-to-top text-left" style="margin: 50px auto;">
     <i class="fas fa-chevron-circle-left"></i>
     作品一覧に戻る
   </a>
