--- a/_pages/exhibition/2023-23.md
+++ b/_pages/exhibition/2023-23.md
@@ -42,7 +42,7 @@ description: タイトル通りのシューティングゲームです。<br>マ
 </div>
 
 <div class="content main_content">
-  <a href="/exhibition#23" class="back-to-top text-left" style="margin: 50px auto;">
+  <a href="/exhibition" class="back-to-top text-left" style="margin: 50px auto;">
     <i class="fas fa-chevron-circle-left"></i>
     作品一覧に戻る
   </a>
