--- a/_pages/exhibition/2023-27.md
+++ b/_pages/exhibition/2023-27.md
@@ -42,7 +42,7 @@ description: この作品は屋敷をイメージして作った物です<br>・
 </div>
 
 <div class="content main_content">
-  <a href="/exhibition#27" class="back-to-top text-left" style="margin: 50px auto;">
+  <a href="/exhibition" class="back-to-top text-left" style="margin: 50px auto;">
     <i class="fas fa-chevron-circle-left"></i>
     作品一覧に戻る
   </a>
