--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -42,7 +42,7 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
 </div>
 
 <div class="content main_content">
-  <a href="/exhibition#9" class="back-to-top text-left" style="margin: 50px auto;">
+  <a href="/exhibition" class="back-to-top text-left" style="margin: 50px auto;">
     <i class="fas fa-chevron-circle-left"></i>
     作品一覧に戻る
   </a>
