--- a/_pages/exhibition/2023-27.md
+++ b/_pages/exhibition/2023-27.md
@@ -66,12 +66,12 @@ description: この作品は屋敷をイメージして作った物です<br>・
   .box { width:auto; margin: 50px auto 30px; }
   .box h5 { text-align: left; }
   .box p  { text-align: left; }
-  .box a  { color: #7e2639;   }
   .contents {
     width:   auto;
     margin:  0 auto;
     padding: 5px;
   }
+  .main_content a { color: #7e2639; }
   .main_content{
     display: block;
     margin: 0 auto 12px;
