Fix typo: 洋平 -> 要平

--- a/_posts/2023-12-03-movies.md
+++ b/_posts/2023-12-03-movies.md
@@ -12,7 +12,7 @@ permalink: /posts/movies/
 - なぜ女子大に工学部が必要か？（藤田盟児）
 - CoderDojoサミット〜全国のチャンピオンに会おう〜（CoderDojo チャンピオンのみなさん）
 - プログラミング教育はオワコンか！？（阿部和広）
-- 2023年 CoderDojo Japan 活動報告＆閉会式（安川洋平）
+- 2023年 CoderDojo Japan 活動報告＆閉会式（安川要平）
 
 実施形態の都合上、みんなのセッションは動画がありません、ご了承ください。
 
