名前を変更

--- a/_posts/2023-12-03-movies.md
+++ b/_posts/2023-12-03-movies.md
@@ -20,4 +20,4 @@ permalink: /posts/movies/
 
 [DojoCon Japan 2023 セッション動画プレイリスト](https://www.youtube.com/playlist?list=PL_XgRvFvKBPYiUsQKh4ARiD882kzoG5GQ)
 
-動画編集： CoderDojo 尾張 チャンピオン 上野勝之
+動画編集： CoderDojo 尾張 チャンピオン Katz Ueno
